# nixminigui

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: async_command.rs  cached_fixed_input.rs  config_manager.rs  config_source.rs  distant_input.rs  gate.rs  input.rs  input_distant.rs  inputs_list.rs  inputs_set.rs  lib.rs  main.rs  nixtool.rs  ongoing_save.rs  saved_config.rs
src/gui/: application.rs  displayed_configuration.rs  mod.rs
test_config/factorio/: config.json  package.nix
test_config/minetest/: config.json  package.nix
