[package]
name = "nixminigui"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
quick-error = "1.2.3" #TODO: use someerror instead
iced = { path = "../iced" }
